--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_map: ^3.1.0
   latlong2: ^0.8.1
+  firebase_core: ^2.8.0
+  cloud_firestore: ^4.4.5
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
